upload new header

--- a/Outbreak/OU2_Roll20_charsheet.html
+++ b/Outbreak/OU2_Roll20_charsheet.html
@@ -33,8 +33,12 @@
                         <td class="small center" colspan="2">Willpower</td>
                     </tr>
                     <tr>
-                        <td class="right"><input type="text" name="attr_Sb" class="spewbonus" title="Strength Bonus" value="0"/><input type="hidden" name="attr_strength" value="[[(@{Sb}*10)+@{str}]]"></td>
-                        <td class="left"><input type="text" name="attr_str" class="spewones" value="0"/></td>
+                        <td class="right">
+                            <input type="text" name="attr_Sb" class="spewbonus" title="Strength Bonus" value="0"/>
+                            <input type="hidden" name="attr_strength" value="[[(@{Sb}*10)+@{str}]]"></td>
+                        <td class="left">
+                            <input type="text" name="attr_str" class="spewones" value="0"/>
+                        </td>
                         <td></td>
                         <td class="right"><input type="text" name="attr_Pb" class="spewbonus" title="Perception Bonus" value="0"/><input type="hidden" name="attr_perception" value="[[(@{Pb}*10)+@{per}]]"></td>
                         <td class="left"><input type="text" name="attr_per" class="spewones" value="0"/></td>
@@ -871,7 +875,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="sheet-tab-content sheet-tab3">
         <div style="background-color:#e6e6e6;padding:10px;border: 1px solid lightgrey;height:1130px;">
             <div class="page-notes" style="height:1030px;width:840px;">
