--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -10,42 +10,78 @@
   <div class="main tab">
     <div class="column">
       <div class="grid spewbox">
-        <h1>S.P.E.W Attributes</h1>
-        <div class="dicetypes">
-          <div class="grid box attributebox"><img val="Strength" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Attributes_Strength_40x40.png"/><br/><span>Strength</span>
-            <p>
-              <input class="spewbonus" type="text" name="attr_Strengthbonus" title="StrengthBonus" value="0"/>
-              <input class="spewones" type="text" name="attr_Strength" value="[[(@{#valBonus}*10)+@{val}]]"/>
-            </p>
+        <h1 class="green-header" data-i18n="S.P.E.W Attributes">S.P.E.W Attributes</h1>
+        <div class="grid dicetypes">
+          <div class="grid attributes"><img alt="Strength" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Strength_40x40.png"/>
+            <h2 data-i18n="Strength">Strength</h2>
+            <div class="grid">
+              <input name="attr_strength" type="hidden" value="[[(@{strength_bonus}*10)+@{strength_base}]]"/>
+              <label>
+                <input name="attr_strength_bonus" title="@{strength_bonus}" type="text" value="0"/>
+              </label>
+              <label>
+                <input name="attr_strength_base" title="@{strength_base}" type="text" value="0"/>
+              </label>
+            </div>
           </div>
-          <div class="grid box attributebox"><img val="Perception" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Attributes_Perception_40x40.png"/><br/><span>Perception</span>
-            <p>
-              <input class="spewbonus" type="text" name="attr_Perceptionbonus" title="PerceptionBonus" value="0"/>
-              <input class="spewones" type="text" name="attr_Perception" value="[[(@{#valBonus}*10)+@{val}]]"/>
-            </p>
+          <div class="grid attributes"><img alt="Perception" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Perception_40x40.png"/>
+            <h2 data-i18n="Perception">Perception</h2>
+            <div class="grid">
+              <input name="attr_perception" type="hidden" value="[[(@{perception_bonus}*10)+@{perception_base}]]"/>
+              <label>
+                <input name="attr_perception_bonus" title="@{perception_bonus}" type="text" value="0"/>
+              </label>
+              <label>
+                <input name="attr_perception_base" title="@{perception_base}" type="text" value="0"/>
+              </label>
+            </div>
           </div>
-          <div class="grid box attributebox"><img val="Empathy" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Attributes_Empathy_40x40.png"/><br/><span>Empathy</span>
-            <p>
-              <input class="spewbonus" type="text" name="attr_Empathybonus" title="EmpathyBonus" value="0"/>
-              <input class="spewones" type="text" name="attr_Empathy" value="[[(@{#valBonus}*10)+@{val}]]"/>
-            </p>
+          <div class="grid attributes"><img alt="Empathy" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Empathy_40x40.png"/>
+            <h2 data-i18n="Empathy">Empathy</h2>
+            <div class="grid">
+              <input name="attr_empathy" type="hidden" value="[[(@{empathy_bonus}*10)+@{empathy_base}]]"/>
+              <label>
+                <input name="attr_empathy_bonus" title="@{empathy_bonus}" type="text" value="0"/>
+              </label>
+              <label>
+                <input name="attr_empathy_base" title="@{empathy_base}" type="text" value="0"/>
+              </label>
+            </div>
           </div>
-          <div class="grid box attributebox"><img val="Willpower" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/outbreak/images/OU_Attributes_Willpower_40x40.png"/><br/><span>Willpower</span>
-            <p>
-              <input class="spewbonus" type="text" name="attr_Willpowerbonus" title="WillpowerBonus" value="0"/>
-              <input class="spewones" type="text" name="attr_Willpower" value="[[(@{#valBonus}*10)+@{val}]]"/>
-            </p>
+          <div class="grid attributes"><img alt="Willpower" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/outbreakv1/Outbreak/src/img/OU_Attributes_Willpower_40x40.png"/>
+            <h2 data-i18n="Willpower">Willpower</h2>
+            <div class="grid">
+              <input name="attr_willpower" type="hidden" value="[[(@{willpower_bonus}*10)+@{willpower_base}]]"/>
+              <label>
+                <input name="attr_willpower_bonus" title="@{willpower_bonus}" type="text" value="0"/>
+              </label>
+              <label>
+                <input name="attr_willpower_base" title="@{willpower_base}" type="text" value="0"/>
+              </label>
+            </div>
           </div>
         </div>
-        <div class="grid box points">
-          <div class="grid box pointsbox"><span>Survival Points:</span>
-            <input class="points" type="text" name="attr_Survivalpoints" title="Survivalpoints" value="0"/>
+        <div class="grid points">
+          <h2 data-i18n="Survival">Survival Points:</h2>
+          <label>
+            <input class="points" name="attr_Survival_points" title="@{Survival_points}" value="0" type="text"/>
+          </label>
+          <h2 data-i18n="Competance">Competance Points:</h2>
+          <label>
+            <input class="points" name="attr_Competance_points" title="@{Competance_points}" value="0" type="text"/>
+          </label>
+          <h2 data-i18n="Gestalt">Gestalt Level:</h2>
+          <label>
+            <input class="points" name="attr_Gestalt_points" title="@{Gestalt_points}" value="0" type="text"/>
+          </label>
+        </div>
+        <div class="grid skills">
+          <h1 data-i18n="Skills">Skills</h1>
+          <div class="grid">
+            <h2 data-i18n="Basic Skills">Basic Skills</h2>
           </div>
-          <div class="grid box pointsbox"><span>Competance Points:</span>
-            <input class="points" type="text" name="attr_Competancepoints" title="Competancepoints" value="0"/>
-          </div>
-          <div class="grid box pointsbox"><span>Gestalt Points:</span>
-            <input class="points" type="text" name="attr_Gestaltpoints" title="Gestaltpoints" value="0"/>
+          <div class="grid">
+            <h2 data-i18n="Trained Skills">Trained Skills</h2>
           </div>
         </div>
       </div>
