--- a/Outbreak/outbreak.html
+++ b/Outbreak/outbreak.html
@@ -62,26 +62,119 @@
           </div>
         </div>
         <div class="grid points">
-          <h2 data-i18n="Survival">Survival Points:</h2>
+          <h2 data-i18n="Survival Points:">Survival Points:</h2>
           <label>
             <input class="points" name="attr_Survival_points" title="@{Survival_points}" value="0" type="text"/>
           </label>
-          <h2 data-i18n="Competance">Competance Points:</h2>
+          <h2 data-i18n="Competance Points:">Competance Points:</h2>
           <label>
             <input class="points" name="attr_Competance_points" title="@{Competance_points}" value="0" type="text"/>
           </label>
-          <h2 data-i18n="Gestalt">Gestalt Level:</h2>
+          <h2 data-i18n="Gestalt Level:">Gestalt Level:</h2>
           <label>
             <input class="points" name="attr_Gestalt_points" title="@{Gestalt_points}" value="0" type="text"/>
           </label>
         </div>
         <div class="grid skills">
-          <h1 data-i18n="Skills">Skills</h1>
+          <h1 class="yellow-header" data-i18n="Skills">Skills</h1>
+          <h2 data-i18n="Basic Skills">Basic Skills</h2>
           <div class="grid">
-            <h2 data-i18n="Basic Skills">Basic Skills</h2>
+            <h3 data-i18n="Balance">Balance</h3>
+            <input class="skillstat" name="attr_Balance" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltBalance" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_BalanceTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_BalanceTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Balance" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Balance}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Brawl">Brawl</h3>
+            <input class="skillstat" name="attr_Brawl" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltBrawl" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_BrawlTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_BrawlTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Brawl" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Brawl}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Climb">Climb</h3>
+            <input class="skillstat" name="attr_Climb" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltClimb" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_ClimbTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_ClimbTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Climb" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Climb}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Composure">Composure</h3>
+            <input class="skillstat" name="attr_Composure" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltComposure" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_ComposureTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_ComposureTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Composure" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Composure}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Dodge">Dodge</h3>
+            <input class="skillstat" name="attr_Dodge" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltDodge" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_DodgeTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_DodgeTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Dodge" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Dodge}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Endurance">Endurance</h3>
+            <input class="skillstat" name="attr_Endurance" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltEndurance" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_EnduranceTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_EnduranceTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Endurance" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Endurance}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Expression">Expression</h3>
+            <input class="skillstat" name="attr_Expression" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltExpression" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_ExpressionTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_ExpressionTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Expression" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Expression}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Grapple">Grapple</h3>
+            <input class="skillstat" name="attr_Grapple" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltGrapple" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_GrappleTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_GrappleTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Grapple" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Grapple}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Hold">Hold</h3>
+            <input class="skillstat" name="attr_Hold" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltHold" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_HoldTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_HoldTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Hold" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Hold}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Jump/Leap">Jump/Leap</h3>
+            <input class="skillstat" name="attr_Jump/Leap" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltJump/Leap" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_Jump/LeapTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_Jump/LeapTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Jump/Leap" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Jump/Leap}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Lift/Pull">Lift/Pull</h3>
+            <input class="skillstat" name="attr_Lift/Pull" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltLift/Pull" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_Lift/PullTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_Lift/PullTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Lift/Pull" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Lift/Pull}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Resist Pain">Resist Pain</h3>
+            <input class="skillstat" name="attr_Resist Pain" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltResist Pain" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_Resist PainTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_Resist PainTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Resist Pain" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Resist Pain}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Search">Search</h3>
+            <input class="skillstat" name="attr_Search" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltSearch" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_SearchTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_SearchTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Search" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Search}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Spot/Listen">Spot/Listen</h3>
+            <input class="skillstat" name="attr_Spot/Listen" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltSpot/Listen" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_Spot/ListenTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_Spot/ListenTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Spot/Listen" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Spot/Listen}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
+            <h3 data-i18n="Stealth">Stealth</h3>
+            <input class="skillstat" name="attr_Stealth" value="(@{perception}+@{Wb})" title="Perception + Wb" type="hidden"/>
+            <input class="skillstat" type="text" name="attr_GestaltStealth" value="0" title="Input total skill gain from spent gestalt levels"/>
+            <input class="skillstat" type="text" name="attr_StealthTotal" value="[[@#{val}+@{Gest#{val}}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." disabled="true"/>
+            <input class="skillname" type="hidden" name="attr_StealthTot" value="(@{#{val}Total} [Skill]+@{#{val}BaseTv} [Kit])" disabled="true"/>
+            <button class="skillstat" type="roll" name="roll_Stealth" title="If using no gear select none and select a multiplier of 0" value="&amp;{template:rolls} {{header=^{Stealth}}} {{subheader=@{strength}}} {{dice=[[1d10]]}} {{dice2=[[1d10]]}}"></button>
           </div>
+          <h2 data-i18n="Trained Skills">Trained Skills</h2>
           <div class="grid">
-            <h2 data-i18n="Trained Skills">Trained Skills</h2>
+          </div>
+          <h2 data-i18n="Expert Skills">Expert Skills</h2>
+          <div class="grid">
           </div>
         </div>
       </div>
