--- a/Outbreak/OU2_Roll20_charsheet.html
+++ b/Outbreak/OU2_Roll20_charsheet.html
@@ -90,10 +90,19 @@
                         <td style="width:1px">
                             <input type="hidden" name="attr_Bal" value="(@{perception}+@{Wb})" class="narrow" title="Perception + Wb" disabled="true" />
                         </td>
-                        <td class="skill-stat"><input type="text" name="attr_GestBal" value="0" class="narrow" title="Input total skill gain from spent gestalt levels" /></td>
-                        <td class="skill-stat"><input type="text" name="attr_BalTotal" value="[[@{Bal}+@{GestBal}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." class="narrow" disabled='true' /><input type="hidden" name="attr_BalTot" value="(@{BalTotal} [Skill]+@{BalBaseTv} [Kit])" disabled="true" /></td>
-                        <td class="skill-stat"><button type="roll" name="roll_Balance" title="If using no gear select none and select a multiplier of 0" value="&{template:ou} {{name=@{character_name}}} {{roll_name={Bal%}}} {{attr=Balance}} {{Target1=[[@{BalTot}]]}} {{Target2=[[@{BalTot}+1]]}} {{skill=VS.}} {{Diff=@{dpDiff}}} {{Spd1=@{dpSpeed}}} {{Dmg=@{dpDmg}}} {{Deplet=@{dpDeplet}}} {{DieDif=@{DiffDie}}} {{DieSpd=@{SpeedDie}}} {{DieDmg=@{DmgDie}}} {{DieDep=@{DepletDie}}} {{result=[[1d100+@{dpDiff} [Diff]]]}} {{dos1=[[@{BalTot}-19]]}} {{dos2a=[[@{BalTot}-20]]}} {{dos2b=[[@{BalTot}-29]]}} {{dos3a=[[@{BalTot}-30]]}} {{dos3b=[[@{BalTot}-39]]}} {{dos4a=[[@{BalTot}-40]]}} {{dos4b=[[@{BalTot}-49]]}} {{dof1=[[@{BalTot}+19]]}} {{dof2a=[[@{BalTot}+20]]}} {{dof2b=[[@{BalTot}+29]]}} {{dof3a=[[@{BalTot}+30]]}} {{dof3b=[[@{BalTot}+39]]}} {{dof4a=[[@{BalTot}+40]]}} {{dof4b=[[@{BalTot}+49]]}}"></button></td>
+                        <td class="skill-stat">
+                            <input type="text" name="attr_GestBal" value="0" class="narrow" title="Input total skill gain from spent gestalt levels" />
+                        </td>
+                        <td class="skill-stat">
+                            <input type="text" name="attr_BalTotal" value="[[@{Bal}+@{GestBal}]]" title="Will add Base Training Value equal to Pb + Training Value multiplied by the multiplier or any gear you are using." class="narrow" disabled='true' />
+
+                            <input type="hidden" name="attr_BalTot" value="(@{BalTotal} [Skill]+@{BalBaseTv} [Kit])" disabled="true" /></td>
+                        <td class="skill-stat">
+                            <button type="roll" name="roll_Balance" title="If using no gear select none and select a multiplier of 0" value="&{template:ou} {{name=@{character_name}}} {{roll_name={Bal%}}} {{attr=Balance}} {{Target1=[[@{BalTot}]]}} {{Target2=[[@{BalTot}+1]]}} {{skill=VS.}} {{Diff=@{dpDiff}}} {{Spd1=@{dpSpeed}}} {{Dmg=@{dpDmg}}} {{Deplet=@{dpDeplet}}} {{DieDif=@{DiffDie}}} {{DieSpd=@{SpeedDie}}} {{DieDmg=@{DmgDie}}} {{DieDep=@{DepletDie}}} {{result=[[1d100+@{dpDiff} [Diff]]]}} {{dos1=[[@{BalTot}-19]]}} {{dos2a=[[@{BalTot}-20]]}} {{dos2b=[[@{BalTot}-29]]}} {{dos3a=[[@{BalTot}-30]]}} {{dos3b=[[@{BalTot}-39]]}} {{dos4a=[[@{BalTot}-40]]}} {{dos4b=[[@{BalTot}-49]]}} {{dof1=[[@{BalTot}+19]]}} {{dof2a=[[@{BalTot}+20]]}} {{dof2b=[[@{BalTot}+29]]}} {{dof3a=[[@{BalTot}+30]]}} {{dof3b=[[@{BalTot}+39]]}} {{dof4a=[[@{BalTot}+40]]}} {{dof4b=[[@{BalTot}+49]]}}"></button>
+                        </td>
                         <td style="width:16px"></td>
+
+
                         <td class="skill-name right">Hold:<input type="hidden" name='attr_HoldBaseTv' value="[[(?{Gear Or Kit| None, 0 | Archery, @{ArchTv}+@{Wb}|Athletic Gear, @{AthlTv}+@{Wb}|Bludgeon, @{BludTv}+@{Wb}|Climbing Gear, @{ClimTv}+@{Wb}|Command Apparatus, @{CommTv}+@{Wb}|Firefighting, @{FireTv}+@{Wb}|First Aid Kit, @{FirsTv}+@{Wb}|Long Gun, @{LngGnTv}+@{Wb}|Martial Arts, @{MtlArtTv}+@{Wb}|Medical Gear, @{MediTv}+@{Wb}|Piercing, @{PierTv}+@{Wb}|Pistol, @{PistTv}+@{Wb}|Recon Gear, @{RecoTv}+@{Wb}|Slashing, @{SlashTv}+@{Wb}|Survival Kit, @{SurvTv}+@{Wb}|Swimming/Diving, @{SwimTv}+@{Wb}|Throwing, @{ThrowTv}+@{Wb}|Tools, @{ToolTv}+@{Wb}|Value, @{ValuTv}+@{Wb}|Vehicles, @{VehiTv}+@{Wb}})*?{Multiplier|1|2|3|4|5}]]" disabled="true" /></td>
                         <td style="width:1px"><input type="hidden" name="attr_Hold" value="(@{willpower}+@{Pb})" class="narrow" title="Willpower + Pb" disabled='true' /></td>
                         <td class="skill-stat"><input type="text" name="attr_GestHold" value="0" class="narrow" title="Input total skill gain from spent gestalt levels" /></td>
