moving to use label for div

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -938,9 +938,7 @@
             <div class="sheet-oracle-box">
                 <div class="sheet-oracle-title">Plot Oracles</div>
                 <div class="sheet-oracle">
-                    <!-- <label class="sheet-page-label" for="actionOracleRoll">Action:</label> -->
-                    Action: <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle" value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[1d100]]}}"></button>
-                    <label class="sheet-oracle-show" for="actionOracle">Show</label>
+                    <label class="sheet-oracle-show" for="actionOracle">Action</label>
                 </div>
                 <div class="sheet-oracle">
                     Theme: <button type="roll" title="Theme Oracle" name="rollthemeoracle" value="&{template:ironswornoracles} {{header=Theme Oracle}} {{theme=[[1d100]]}}"></button>
@@ -1037,6 +1035,7 @@
             <input type="radio" class="sheet-action sheet-hidden" id="actionOracle" name="attr_previewtable" value="1"/>
             <div class="sheet-action sheet-hidden-flex">
                 <div class="sheet-oracle-title">ACTION</div>
+                <button type="roll" id="actionOracleRoll" title="Action Oracle" name="rollactionoracle" value="&{template:ironswornoracles} {{header=Action Oracle}} {{action=[[1d100]]}}"></button>
                 <div class="sheet-oracle-table">
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Scheme</span></div>
                     <div class="oracle-row"><span class="oracle-roll">1-3</span><span class="sheet-oracle-result">Clash</span></div>
